@@ -8,6 +8,8 @@ child_pid = None
 testdir = os.path.dirname(__file__)
 sys.path.insert(0, os.path.join(testdir, '../'))
 
+import twill
+
 def cd_testdir():
     global cwd
     cwd = os.getcwd()
@@ -16,6 +18,20 @@ def cd_testdir():
 def pop_testdir():
     global cwd
     os.chdir(cwd)
+
+def execute_twill_script(filename, inp=None):
+    global testdir
+    
+    if inp:
+        inp_fp = StringIO(inp)
+        old, sys.stdin = sys.stdin, inp_fp
+
+    scriptfile = os.path.join(testdir, filename)
+    try:
+        twill.execute_file(filename)
+    finally:
+        if inp:
+            sys.stdin = old
 
 def run_server(create_fn, PORT=8080):
     """
